<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:gravity="top|center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:text="@string/setttingmain_push"
            android:textColor="@color/gray_33"
            android:textSize="15sp" />


        <com.tianpingpai.widget.SwitchButton
            android:id="@+id/push_toggle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:checked="true"
            app:onColor="@color/green_0c" />


    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/line_delive_bottom" />

    <LinearLayout
        android:id="@+id/settingmain_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/replace_access_token_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/abc_list_selector_holo_dark"
            android:clickable="true"
            android:drawableRight="@drawable/ic_151020_setting_right"
            android:padding="12dip"
            android:text="替换AccessToken"
            android:textColor="@color/gray_33"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/help_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/abc_list_selector_holo_dark"
            android:clickable="true"
            android:drawableEnd="@drawable/ic_151020_setting_right"
            android:drawableRight="@drawable/ic_151020_setting_right"
            android:padding="12dip"
            android:text="@string/setttingmain_help"
            android:textColor="@color/gray_33"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dip"
            android:layout_marginEnd="12dip"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dip"
            android:layout_marginStart="12dp"
            android:background="@color/gray_e6" />

        <TextView
            android:id="@+id/feedback_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/abc_list_selector_holo_dark"
            android:clickable="true"
            android:drawableEnd="@drawable/ic_151020_setting_right"
            android:drawableRight="@drawable/ic_151020_setting_right"
            android:padding="12dip"
            android:text="@string/feedback"
            android:textColor="@color/gray_33"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dip"
            android:layout_marginEnd="12dip"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dip"
            android:layout_marginStart="12dp"
            android:background="@color/gray_e6" />

        <TextView
            android:id="@+id/about_us_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/abc_list_selector_holo_dark"
            android:clickable="true"
            android:drawableEnd="@drawable/ic_151020_setting_right"
            android:drawableRight="@drawable/ic_151020_setting_right"
            android:padding="12dip"
            android:text="@string/about_us"
            android:textColor="@color/gray_33"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dip"
            android:layout_marginEnd="12dip"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dip"
            android:layout_marginStart="12dp"
            android:background="@color/gray_e6" />

        <TextView
            android:id="@+id/check_update_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/abc_list_selector_holo_dark"
            android:clickable="true"
            android:drawableEnd="@drawable/ic_151020_setting_right"
            android:drawableRight="@drawable/ic_151020_setting_right"
            android:padding="12dip"
            android:text="@string/check_update"
            android:textColor="@color/gray_33"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dip"
            android:layout_marginEnd="12dip"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dip"
            android:layout_marginStart="12dp"
            android:background="@color/gray_e9" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:paddingEnd="12dp"
            android:paddingLeft="0dp"
            android:paddingRight="12dp"
            android:paddingStart="0dp"
            android:paddingTop="12dp">

            <TextView
                android:id="@+id/tv_version_name_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:text="当前版本"
                android:textColor="@color/gray_33"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/version_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@id/tv_version_name_tag"
                android:layout_toRightOf="@id/tv_version_name_tag"
                android:text="1.0"
                android:textColor="@color/gray_33"
                android:textSize="15sp" />

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/logout_button"
        style="@style/Widget.Button.Green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dip"
        android:layout_marginLeft="12dip"
        android:layout_marginRight="12dip"
        android:layout_marginStart="12dip"
        android:layout_marginTop="16dp"
        android:text="@string/logout" />

</LinearLayout>